--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -117,7 +117,7 @@ body {
   background-color: #ffe161 !important;
 }
 .bg-danger {
-  background-color: #ff9966 !important;
+  background-color: #873cdf !important;
 }
 .btn-primary,
 .btn-primary:active {
@@ -143,8 +143,8 @@ body {
 }
 .btn-secondary,
 .btn-secondary:active {
-  background-color: #ff6666 !important;
-  border-color: #ff6666 !important;
+  background-color: #873cdf !important;
+  border-color: #873cdf !important;
   color: #ffffff !important;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
 }
@@ -153,15 +153,15 @@ body {
 .btn-secondary.focus,
 .btn-secondary.active {
   color: #ffffff !important;
-  background-color: #ff0f0f !important;
-  border-color: #ff0f0f !important;
+  background-color: #5d1ca9 !important;
+  border-color: #5d1ca9 !important;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
 }
 .btn-secondary.disabled,
 .btn-secondary:disabled {
   color: #ffffff !important;
-  background-color: #ff0f0f !important;
-  border-color: #ff0f0f !important;
+  background-color: #5d1ca9 !important;
+  border-color: #5d1ca9 !important;
 }
 .btn-info,
 .btn-info:active {
@@ -231,8 +231,8 @@ body {
 }
 .btn-danger,
 .btn-danger:active {
-  background-color: #ff9966 !important;
-  border-color: #ff9966 !important;
+  background-color: #873cdf !important;
+  border-color: #873cdf !important;
   color: #ffffff !important;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
 }
@@ -241,15 +241,15 @@ body {
 .btn-danger.focus,
 .btn-danger.active {
   color: #ffffff !important;
-  background-color: #ff5f0f !important;
-  border-color: #ff5f0f !important;
+  background-color: #5d1ca9 !important;
+  border-color: #5d1ca9 !important;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
 }
 .btn-danger.disabled,
 .btn-danger:disabled {
   color: #ffffff !important;
-  background-color: #ff5f0f !important;
-  border-color: #ff5f0f !important;
+  background-color: #5d1ca9 !important;
+  border-color: #5d1ca9 !important;
 }
 .btn-white,
 .btn-white:active {
@@ -319,23 +319,23 @@ body {
 .btn-secondary-outline,
 .btn-secondary-outline:active {
   background-color: transparent !important;
-  border-color: #ff6666;
-  color: #ff6666;
+  border-color: #873cdf;
+  color: #873cdf;
 }
 .btn-secondary-outline:hover,
 .btn-secondary-outline:focus,
 .btn-secondary-outline.focus,
 .btn-secondary-outline.active {
-  color: #ff0f0f !important;
+  color: #5d1ca9 !important;
   background-color: transparent!important;
-  border-color: #ff0f0f !important;
+  border-color: #5d1ca9 !important;
   box-shadow: none!important;
 }
 .btn-secondary-outline.disabled,
 .btn-secondary-outline:disabled {
   color: #ffffff !important;
-  background-color: #ff6666 !important;
-  border-color: #ff6666 !important;
+  background-color: #873cdf !important;
+  border-color: #873cdf !important;
 }
 .btn-info-outline,
 .btn-info-outline:active {
@@ -403,23 +403,23 @@ body {
 .btn-danger-outline,
 .btn-danger-outline:active {
   background-color: transparent !important;
-  border-color: #ff9966;
-  color: #ff9966;
+  border-color: #873cdf;
+  color: #873cdf;
 }
 .btn-danger-outline:hover,
 .btn-danger-outline:focus,
 .btn-danger-outline.focus,
 .btn-danger-outline.active {
-  color: #ff5f0f !important;
+  color: #5d1ca9 !important;
   background-color: transparent!important;
-  border-color: #ff5f0f !important;
+  border-color: #5d1ca9 !important;
   box-shadow: none!important;
 }
 .btn-danger-outline.disabled,
 .btn-danger-outline:disabled {
   color: #ffffff !important;
-  background-color: #ff9966 !important;
-  border-color: #ff9966 !important;
+  background-color: #873cdf !important;
+  border-color: #873cdf !important;
 }
 .btn-black-outline,
 .btn-black-outline:active {
@@ -467,7 +467,7 @@ body {
   color: #4479d9 !important;
 }
 .text-secondary {
-  color: #ff6666 !important;
+  color: #873cdf !important;
 }
 .text-success {
   color: #40b0bf !important;
@@ -479,7 +479,7 @@ body {
   color: #ffe161 !important;
 }
 .text-danger {
-  color: #ff9966 !important;
+  color: #873cdf !important;
 }
 .text-white {
   color: #fafafa !important;
@@ -495,7 +495,7 @@ a.text-primary.active {
 a.text-secondary:hover,
 a.text-secondary:focus,
 a.text-secondary.active {
-  color: #ff0000 !important;
+  color: #551a9b !important;
 }
 a.text-success:hover,
 a.text-success:focus,
@@ -515,7 +515,7 @@ a.text-warning.active {
 a.text-danger:hover,
 a.text-danger:focus,
 a.text-danger.active {
-  color: #ff5500 !important;
+  color: #551a9b !important;
 }
 a.text-white:hover,
 a.text-white:focus,
@@ -556,7 +556,7 @@ a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):hover {
   background-color: #ffe161;
 }
 .alert-danger {
-  background-color: #ff9966;
+  background-color: #873cdf;
 }
 .mbr-gallery-filter li.active .btn {
   background-color: #4479d9;
@@ -588,7 +588,7 @@ a:hover {
 }
 .mbr-plan-header.bg-danger .mbr-plan-subtitle,
 .mbr-plan-header.bg-danger .mbr-plan-price-desc {
-  color: #ffffff;
+  color: #f3ebfc;
 }
 /* Scroll to top button*/
 .form-control {
@@ -651,8 +651,8 @@ blockquote {
 }
 .xdsoft_datetimepicker .xdsoft_calendar td:hover,
 .xdsoft_datetimepicker .xdsoft_timepicker .xdsoft_time_box > div > div:hover {
-  color: #000000 !important;
-  background: #ff6666 !important;
+  color: #ffffff !important;
+  background: #873cdf !important;
   box-shadow: none !important;
 }
 .lazy-bg {
@@ -1161,6 +1161,65 @@ a {
 .cid-sdEsaBB6HP .item-subtitle {
   text-align: left;
 }
+.cid-sdGOnBcO8V {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-sdGOnBcO8V h4 {
+  margin-bottom: 0;
+}
+.cid-sdGOnBcO8V .card:hover img {
+  box-shadow: 0 10px 55px 5px rgba(162, 104, 230, 0.35);
+}
+.cid-sdGOnBcO8V .btn[class*="-outline"] {
+  border: none;
+  padding: 0;
+  margin: 0 0.25rem!important;
+  box-shadow: none!important;
+}
+.cid-sdGOnBcO8V .btn[class*="-outline"] span {
+  order: 2;
+  font-size: 1.1rem;
+  padding-top: 3px;
+  transition: padding 0.3s!important;
+}
+.cid-sdGOnBcO8V .btn[class*="-outline"]:hover span {
+  padding-left: 10px;
+}
+.cid-sdGOnBcO8V .btn[class*="-outline"]:hover {
+  background-color: transparent!important;
+  color: #4479d9 !important;
+  box-shadow: none!important;
+}
+.cid-sdGOnBcO8V .btn[class*="-outline"]:active,
+.cid-sdGOnBcO8V .btn[class*="-outline"]:focus {
+  background-color: transparent!important;
+  box-shadow: none!important;
+}
+.cid-sdGOnBcO8V .card-box {
+  padding-top: 2rem;
+}
+.cid-sdGOnBcO8V .card-wrapper {
+  height: 100%;
+}
+.cid-sdGOnBcO8V .mbr-iconfont {
+  padding-left: 0.4rem;
+}
+.cid-sdGOnBcO8V img {
+  transition: all 0.3s;
+  border-radius: 8px;
+}
+.cid-sdGOnBcO8V .card-title {
+  color: #149dcc;
+}
+.cid-sdGOnBcO8V .main-title {
+  color: #232323;
+}
+.cid-sdGOnBcO8V .mbr-text,
+.cid-sdGOnBcO8V .mbr-link-btn {
+  color: #767676;
+}
 .cid-sdDPZAzQ3d {
   padding-top: 6rem;
   padding-bottom: 6rem;
@@ -1471,7 +1530,7 @@ a {
   height: 100%;
   object-fit: cover;
   animation: line 4s ease-in-out infinite;
-  box-shadow: 0 10px 55px 5px rgba(255, 153, 153, 0.35);
+  box-shadow: 0 10px 55px 5px rgba(162, 104, 230, 0.35);
 }
 .cid-sdDPWKj80e .box {
   width: 95%;
